fix textoverflow on user#show and post partial

--- a/app/assets/stylesheets/post.css
+++ b/app/assets/stylesheets/post.css
@@ -9,6 +9,7 @@
 .post a{
   text-decoration: none;
   color: black;
+  width: 95%;
 }
 
 .post a i{
@@ -39,6 +40,13 @@
   height: 48px;
   width: 48px;
   margin-right: 10px;
+}
+
+.post-user span{
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .post-settings{
